9 August 2012
+ Add enable_on_exec test

7 August 2012
+ Add breakpoint test
+ Add some inherit tests

13 July 2012
+ Fix rdpmc tests to not segfault if support not in kernel
+ Add a few tests
+ Release version 0.26

21 December 2011
+ Add some rdpmc() tests
+ Release version 0.25

8 September 2011
+ Re-arrange directory structure a bit
+ Add the corner_cases/signal_after_exec test
+ For corner cases now print results as OLD/NEW BEHAVIOR
+ Add the bugs/nmi_watchdog_group_leader test
+ Release version 0.24


10 August 2011
+ Add branches ARM assembly thanks to sam wang.
  This turned up a bug in Cortex A9 kernel generalized event.
+ Release version 0.23

5 August 2011
+ Add a PAPI test that looks for a race condition when
  we lookup/add events from multiple threads at once.
+ Release version 0.22

3 August 2011
+ Minor fixes to crashes/oflo_sw_cpu_clock_crash
+ Some minor changes to OFFCORE_EVENTS while testing
  some kernel patches.
+ Release version 0.21

2 August 2011
+ Add ARM instruction test code
+ Add code to set the domain properly (exclude_kernel,user,hv all 0)
  on ARMv7
+ Release version 0.20

28 July 2011
+ Add oflo_sw_cpu_clock_crash crash code
+ Release version 0.19

12 July 2011
+ Add check for ENOSPC being returned when buffers are too small
+ Release version 0.18

5 July 2011
+ Finish cache detection infrastructure
+ Release version 0.17

1 July 2011
+ Add cycles test
+ Fix non-existent test to skip if not supported
+ Add test to check if context-switches is kernel only
+ Release version 0.16

28 June 2011
+ Now includes stubs for *all* PAPI predefined events.
+ Release version 0.15

24 June 2011
+ Added more PAPI tests.  Most are placeholders.
+ Release version 0.14

15 June 2011
+ Got all PAPI tests compiling
+ Release version 0.13

10 June 2011
+ Some minor cleanups after running on a Istanbul and a Nehalem.
+ Work on some timing measurements.
+ Release version 0.12

9 June 2011
+ Update more PAPI tests to compile with new setup.