@@ -1,3 +1,6 @@
+16 August 2012
++ Add reset_leader test
+
 9 August 2012
 + Add enable_on_exec test
 
